--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
 	<title>Spacebrew || Phone Events</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=.5, user-scalable=no">
 	<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600'>
 	<link rel='stylesheet' type='text/css' href="mainJN.css" />
 
