--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<script src="js/main.js"></script>
 
 	<style type="text/css">
+	    #red {
+	        -webkit-transform-origin: 50% 89%;
+            position: absolute;
+	    }
 	</style>
 
 </head> 
